--- a/whalas.css
+++ b/whalas.css
@@ -10,7 +10,6 @@ body {
   overflow-x: hidden; /* Evita el desbordamiento horizontal */
 }
 
-
 /* Sección del slider */
 .slider, .slider2, .slider3 {
   width: 100vw; /* Ajusta el ancho al 100% de la vista */
@@ -265,7 +264,7 @@ body {
 
 /**************************
 **************************/
-.container1 {
+.container {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -409,7 +408,6 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
 .accordion {
   width: 100%; /* Asegura que los acordeones tomen todo el ancho disponible */
   max-width: 800px; /* Puedes ajustar este valor según tus necesidades */
@@ -466,7 +464,6 @@ body {
   max-height: 1000px; /* A high value to ensure it expands */
   transition: max-height 0.5s ease-in;
 }
-
 /***********************
 new section
 ***********************/
@@ -542,7 +539,6 @@ new section
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.9); 
 }
-
 .modal-content {
   margin: auto;
   display: block;
@@ -566,10 +562,9 @@ new section
   text-decoration: none;
   cursor: pointer;
 }
-
 /* Responsive Styles */
 @media (max-width: 480px) {
-  .container1 {
+  .container {
     padding: 10px;
   }
 
@@ -619,8 +614,9 @@ new section
   .product-quantity input {
     width: 30px;
   }
-/******** SHARE BOTON******/
 }
+/******** SHARE BOTON******/
+
 .share-button-wrapper {
   text-align: right;
   margin-top: 20px;
@@ -695,8 +691,8 @@ new section
     font-size: 1.2rem;
   }
 }
-  /**************
-   FOOTER
+/**************
+ FOOTER
 **************/
 .main-content {
   flex-grow: 1;
@@ -772,8 +768,9 @@ new section
 
   .footer-menu li {
     display: block;
-    margin: 10px 0;
+    margin: 10px 
   }
+
 
   .footer-menu a {
     text-align: left;
