--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
-  border-radius: 2%;
 }
 
 .navbar .menu a {
@@ -159,11 +158,11 @@ body {
 
   .menu {
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: -250px;
+    left: -100%;
     background-color: #0E1B4D;
-    width: 250px;
+    width: 100%;
     height: 100%;
     transition: left 0.3s ease;
     z-index: 10;
@@ -186,6 +185,12 @@ body {
     height: 25px;
   }
 
+  .menu a {
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
   .search-container {
     display: flex;
     justify-content: flex-end;
@@ -202,21 +207,12 @@ body {
     opacity: 1;
   }
 
-  /* Estilos para el submenú en versión móvil */
-  .submenu-content {
-    position: relative;
-    background-color: #0E1B4D;
-    width: 100%;
-  }
-
-  .submenu-content a {
-    padding: 12px;
-  }
-
-  .menu.active .submenu-content {
-    display: block;
+  /* Evitar scroll cuando el menú está activo */
+  body.menu-active {
+    overflow: hidden;
   }
 }
+
 
 
 /* Sección del slider */
