--- a/politicas.css
+++ b/politicas.css
@@ -9,9 +9,9 @@ body {
   display: flex;
   flex-direction: column;
   overflow-x: hidden; /* Evita el desbordamiento horizontal */
-/* Barra de navegación */
 
-.navbar {
+  /* Barra de navegación */
+  .navbar {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -160,11 +160,11 @@ body {
   
     .menu {
       flex-direction: column;
-      position: absolute;
+      position: fixed;
       top: 0;
-      left: -250px;
+      left: -100%;
       background-color: #0E1B4D;
-      width: 250px;
+      width: 100%;
       height: 100%;
       transition: left 0.3s ease;
       z-index: 10;
@@ -187,6 +187,12 @@ body {
       height: 25px;
     }
   
+    .menu a {
+      padding-left: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  
     .search-container {
       display: flex;
       justify-content: flex-end;
@@ -203,33 +209,17 @@ body {
       opacity: 1;
     }
   
-    /* Estilos para el submenú en versión móvil */
-    .submenu-content {
-      position: relative;
-      background-color: #0E1B4D;
-      width: 100%;
-    }
-  
-    .submenu-content a {
-      padding: 12px;
-    }
-  
-    .menu.active .submenu-content {
-      display: block;
+    /* Evitar scroll cuando el menú está activo */
+    body.menu-active {
+      overflow: hidden;
     }
   }
 
 
 }
 
-/* Estilos generales */
-body {
-  font-family: 'Questrial', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #EFF0F5;
-  color: #0E1B4D;
-}
+/* ACORDEON */
+
 
 .accordion {
   width: 100%; /* ancho del acordeón al 100% del contenedor */
