--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,12 @@ body {
   padding: 0;
   background-color: #EFF0F5;
   color: #0E1B4D;
+  min-height: 100vh; /* Añadir esta línea */
+  display: flex;
+  flex-direction: column;
   overflow-x: hidden; /* Evita el desbordamiento horizontal */
 }
+
 
 /* Barra de navegación */
 .navbar {
@@ -695,20 +699,34 @@ button.next {
 /**************
    FOOTER
 **************/
+.main-content {
+  flex-grow: 1;
+}
+
+/* Footer */
 .footer {
   background-color: #0E1B4D;
   padding: 20px;
   text-align: center;
+  color: #EFF0F5;
+  flex-shrink: 0;
+  width: 100%; /* Asegura que el footer ocupa todo el ancho */
+  box-sizing: border-box; /* Incluye el padding en el ancho total */
 }
 
 .footer-menu {
   list-style-type: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-sizing: border-box; /* Incluye el padding en el ancho total */
 }
 
 .footer-menu li {
-  display: inline;
   margin: 0 15px;
+  box-sizing: border-box; /* Incluye el padding en el ancho total */
 }
 
 .footer-menu a {
@@ -726,60 +744,39 @@ button.next {
   color: #EFF0F5;
 }
 
-/* Estilos responsive */
+/* Estilos responsive para el footer */
 @media screen and (max-width: 768px) {
-  .product-container {
+  .footer-menu {
     flex-direction: column;
     align-items: center;
-    gap: 20px;
   }
 
-  .product-slider {
-    width: 100%;
-    height: auto;
+  .footer-menu li {
+    margin: 10px 0;
   }
 
-  .product-image,
-  .product-image img {
-    height: auto;
-  }
-
-  .product-images {
-    position: static;
+  .payment-methods {
     margin-top: 10px;
   }
 
-  .product-thumb {
-    width: 60px;
-    height: 60px;
+  .footer-text {
+    font-size: 12px;
   }
+}
 
-  .product-info {
-    align-items: center;
-    text-align: center;
-  }
+/* Asegura que no haya desbordamiento horizontal */
+* {
+  box-sizing: border-box;
+}
 
-  .product-info h2 {
-    font-size: 20px;
-  }
+.container {
+  width: 100%;
+  overflow-x: hidden;
+}
 
-  .price-container {
-    gap: 5px;
-  }
 
-  .product-info .old-price,
-  .product-info .price {
-    font-size: 18px;
-  }
-
-  .product-info p {
-    text-align: center;
-  }
-
-  .add-to-cart {
-    padding: 10px 20px;
-  }
-
+/* Estilos responsive */
+@media screen and (max-width: 768px) {
   /* Estilos específicos para el footer en dispositivos móviles */
   .footer-menu {
     display: flex;
