--- a/politicas.css
+++ b/politicas.css
@@ -341,8 +341,18 @@ body {
   text-align: center;
   color: #EFF0F5;
   flex-shrink: 0;
-  width: 100%; /* Asegura que el footer ocupa todo el ancho */
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.footer-menu-container {
+  text-align: center;
+}
+
+.footer-menu-container h1 {
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-size: 18px;
 }
 
 .footer-menu {
@@ -351,13 +361,11 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  gap: 30px;
 }
 
 .footer-menu li {
-  margin: 0 15px;
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  margin: 0;
 }
 
 .footer-menu a {
@@ -366,7 +374,7 @@ body {
 }
 
 .payment-methods {
-  margin-top: 20px;
+  margin-top: 36px;
 }
 
 .footer-text {
@@ -375,52 +383,37 @@ body {
   color: #EFF0F5;
 }
 
-/* Estilos responsive para el footer */
-@media screen and (max-width: 768px) {
-  .footer-menu {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-menu li {
-    margin: 10px 0;
-  }
-
-  .payment-methods {
-    margin-top: 10px;
-  }
-
-  .footer-text {
-    font-size: 12px;
-  }
-}
-
-/* Asegura que no haya desbordamiento horizontal */
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  width: 100%;
-  overflow-x: hidden;
-}
-
-
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
   /* Estilos específicos para el footer en dispositivos móviles */
+  .footer-menu-container {
+    text-align: left;
+    padding-left: 20px; /* Añadir un padding para la separación */
+  }
+
   .footer-menu {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
 
   .footer-menu li {
     display: block;
-    margin: 10px 0;
+    margin: -5px 0;
   }
 
   .footer-menu a {
     text-align: left;
+  }
+
+  .payment-methods {
+    margin-top: 36px;
+    text-align: center;
+    padding-left: 0; /* Quitar padding para centrar */
+  }
+
+  .footer-text {
+    font-size: 12px;
+    text-align: center;
+    padding-left: 0; /* Quitar padding para centrar */
   }
 }
