--- a/styles.css
+++ b/styles.css
@@ -217,8 +217,6 @@ body {
   }
 }
 
-
-
 /* Sección del slider */
 .slider, .slider2, .slider3 {
   width: 100vw; /* Ajusta el ancho al 100% de la vista */
@@ -279,6 +277,7 @@ body {
 .container .content {
   text-align: center;
 }
+
 .button {
   display: inline-block;
   background-color: #0E1B4D;
@@ -299,14 +298,21 @@ body {
 
 @media screen and (max-width: 768px) {
   .container {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
   .container .image, .container .content {
-      width: 100%;
+    width: 100%;
+    text-align: center;
+  }
+
+  .container .image img {
+    margin: 0 auto;
   }
 }
+
 
 /* Sección "Lo que dicen nuestros clientes" */
 .container2 {
@@ -372,6 +378,9 @@ body {
   position: relative;
   text-align: center;
   color: #EFF0F5;
+  margin-top: -10px; /* Ajuste para eliminar espacio entre navbar y hero */
+  height: 60vh; /* Ajuste para hacer la imagen más corta */
+  overflow: hidden;
 }
 
 .hero img {
@@ -698,6 +707,26 @@ button.next {
   cursor: pointer;
 }
 
+/* Estilos generales */
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+/* Estilos generales */
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 /**************
    FOOTER
 **************/
@@ -712,8 +741,18 @@ button.next {
   text-align: center;
   color: #EFF0F5;
   flex-shrink: 0;
-  width: 100%; /* Asegura que el footer ocupa todo el ancho */
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.footer-menu-container {
+  text-align: center;
+}
+
+.footer-menu-container h1 {
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-size: 18px;
 }
 
 .footer-menu {
@@ -722,13 +761,11 @@ button.next {
   margin: 0;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  gap: 30px;
 }
 
 .footer-menu li {
-  margin: 0 15px;
-  box-sizing: border-box; /* Incluye el padding en el ancho total */
+  margin: 0;
 }
 
 .footer-menu a {
@@ -737,7 +774,7 @@ button.next {
 }
 
 .payment-methods {
-  margin-top: 20px;
+  margin-top: 36px;
 }
 
 .footer-text {
@@ -746,52 +783,38 @@ button.next {
   color: #EFF0F5;
 }
 
-/* Estilos responsive para el footer */
-@media screen and (max-width: 768px) {
-  .footer-menu {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-menu li {
-    margin: 10px 0;
-  }
-
-  .payment-methods {
-    margin-top: 10px;
-  }
-
-  .footer-text {
-    font-size: 12px;
-  }
-}
-
-/* Asegura que no haya desbordamiento horizontal */
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  width: 100%;
-  overflow-x: hidden;
-}
-
-
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
   /* Estilos específicos para el footer en dispositivos móviles */
+  .footer-menu-container {
+    text-align: left;
+    padding-left: 20px; /* Añadir un padding para la separación */
+  }
+
   .footer-menu {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
 
   .footer-menu li {
     display: block;
-    margin: 10px 0;
+    margin: -5px 0;
   }
 
   .footer-menu a {
     text-align: left;
   }
+
+  .payment-methods {
+    margin-top: 36px;
+    text-align: center;
+    padding-left: 0; /* Quitar padding para centrar */
+  }
+
+  .footer-text {
+    font-size: 12px;
+    text-align: center;
+    padding-left: 0; /* Quitar padding para centrar */
+  }
 }
+
