--- a/whalas.css
+++ b/whalas.css
@@ -10,7 +10,6 @@ body {
   overflow-x: hidden; /* Evita el desbordamiento horizontal */
 }
 
-
 /* Sección del slider */
 .slider, .slider2, .slider3 {
   width: 100vw; /* Ajusta el ancho al 100% de la vista */
@@ -60,6 +59,8 @@ body {
   padding: 20px;
   background-color: #0E1B4D;
   color: #EFF0F5;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .navbar .logo img {
@@ -256,8 +257,6 @@ body {
   }
 }
 
-/**************************
-**************************/
 .container1 {
   display: flex;
   justify-content: space-around;
@@ -269,12 +268,15 @@ body {
 .product-info {
   width: 50%;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .product-slider {
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  box-sizing: border-box;
 }
 
 .product-image {
@@ -391,6 +393,7 @@ body {
   transition: background-color 0.3s ease;
   margin-top: 10px;
 }
+
 .product-button:hover {
   background-color: #000000;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
@@ -402,6 +405,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
 .accordion {
   width: 100%; /* Asegura que los acordeones tomen todo el ancho disponible */
   max-width: 800px; /* Puedes ajustar este valor según tus necesidades */
@@ -458,9 +462,8 @@ body {
   max-height: 1000px; /* A high value to ensure it expands */
   transition: max-height 0.5s ease-in;
 }
-/***********************
-new section
-***********************/
+
+/* Nueva sección */
 .new-section-wrapper {
   width: 100%; /* Asegura que la nueva sección tome todo el ancho disponible */
   max-width: 800px; /* Puedes ajustar este valor según tus necesidades */
@@ -533,6 +536,7 @@ new section
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.9); 
 }
+
 .modal-content {
   margin: auto;
   display: block;
@@ -556,6 +560,7 @@ new section
   text-decoration: none;
   cursor: pointer;
 }
+
 /* Responsive Styles */
 @media (max-width: 480px) {
   .container {
@@ -609,8 +614,8 @@ new section
     width: 30px;
   }
 }
-/******** SHARE BOTON******/
 
+/* Share button */
 .share-button-wrapper {
   text-align: right;
   margin-top: 20px;
@@ -632,7 +637,8 @@ new section
   margin-right: 5px;
   height: 20px;
 }
-/*******ICON BAR*******/
+
+/* Icon bar */
 .icon-bar {
   display: flex;
   justify-content: space-around;
@@ -685,14 +691,12 @@ new section
     font-size: 1.2rem;
   }
 }
-  /**************
-   FOOTER
-**************/
+
+/* Footer */
 .main-content {
   flex-grow: 1;
 }
 
-/* Footer */
 .footer {
   background-color: #0E1B4D;
   padding: 20px;
@@ -713,6 +717,7 @@ new section
   font-size: 18px;
   color: #EFF0F5;
 }
+
 .footer-menu li:hover {
   text-decoration: underline;
 }
@@ -747,7 +752,6 @@ new section
 
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
-  /* Estilos específicos para el footer en dispositivos móviles */
   .footer-menu-container {
     text-align: left;
     padding-left: 20px; /* Añadir un padding para la separación */
@@ -780,8 +784,7 @@ new section
   }
 }
 
-/*******testimonios*******/
-
+/* Testimonios */
 .testimonial-section {
   text-align: center;
   width: 90%;
@@ -867,4 +870,3 @@ h1 span {
       width: 100%;
   }
 }
-
