--- a/whalas.css
+++ b/whalas.css
@@ -10,10 +10,6 @@ body {
   overflow-x: hidden; /* Evita el desbordamiento horizontal */
 }
 
-html, body {
-  width: 100%; /* Asegura que no haya desbordamiento horizontal */
-  overflow-x: hidden; /* Evita el desbordamiento horizontal */
-}
 
 /* Sección del slider */
 .slider, .slider2, .slider3 {
@@ -56,6 +52,7 @@ html, body {
   }
 }
 
+/* Barra de navegación */
 .navbar {
   display: flex;
   flex-direction: row;
@@ -64,8 +61,6 @@ html, body {
   padding: 20px;
   background-color: #0E1B4D;
   color: #EFF0F5;
-  width: 100%;
-  box-sizing: border-box;
 }
 
 .navbar .logo img {
@@ -118,9 +113,10 @@ html, body {
   opacity: 1;
 }
 
-.navbar .search-container img {
-  width: 25px;
-  height: 25px;
+.navbar .search-container img,
+.carrito img {
+  width: 26px;
+  height: 26px;
   cursor: pointer;
 }
 
@@ -128,12 +124,6 @@ html, body {
   display: flex;
   align-items: center;
   cursor: pointer;
-}
-
-.carrito img {
-  width: 25px;
-  height: 25px;
-  color: #EFF0F5;
 }
 
 .carrito h2 {
@@ -145,6 +135,9 @@ html, body {
 /* Iconos del menú y cerrar menú */
 .menu-icon, .close-icon {
   display: none;
+  font-size: 26px;
+  color: #EFF0F5;
+  cursor: pointer;
 }
 
 /* Estilos del submenú */
@@ -179,30 +172,18 @@ html, body {
 /* Ajustes para la versión móvil */
 @media screen and (max-width: 768px) {
   .navbar {
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    padding: 40px;
   }
 
   .menu-icon {
     display: block;
-    cursor: pointer;
-  }
-
-  .menu-icon img {
-    width: 30px;
-    height: 30px;
   }
 
   .logo {
-    display: flex;
-    justify-content: center;
-    flex: 1;
-    text-align: center;
-  }
-
-  .logo img {
-    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .menu {
@@ -216,7 +197,6 @@ html, body {
     transition: left 0.3s ease;
     z-index: 10;
     padding-top: 20px;
-    overflow-y: auto; /* Permite el desbordamiento vertical */
   }
 
   .menu.active {
@@ -224,15 +204,10 @@ html, body {
   }
 
   .close-icon {
-    display: flex;
-    justify-content: flex-end;
+    display: block;
+    text-align: right;
     padding-right: 20px;
-    cursor: pointer;
-  }
-
-  .close-icon img {
-    width: 25px;
-    height: 25px;
+    font-size: 30px;
   }
 
   .menu a {
@@ -263,6 +238,8 @@ html, body {
   }
 }
 
+/**************************
+**************************/
 .container1 {
   display: flex;
   justify-content: space-around;
@@ -272,17 +249,14 @@ html, body {
 }
 
 .product-info {
-  width: 100%;
+  width: 50%;
   padding: 20px;
-  box-sizing: border-box;
 }
 
 .product-slider {
   position: relative;
-  width: 100%;
-  max-width: 500px;
-  height: auto;
-  box-sizing: border-box;
+  width: 500px;
+  height: 500px;
 }
 
 .product-image {
@@ -399,7 +373,6 @@ html, body {
   transition: background-color 0.3s ease;
   margin-top: 10px;
 }
-
 .product-button:hover {
   background-color: #000000;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
@@ -411,7 +384,6 @@ html, body {
   flex-direction: column;
   align-items: center;
 }
-
 .accordion {
   width: 100%; /* Asegura que los acordeones tomen todo el ancho disponible */
   max-width: 800px; /* Puedes ajustar este valor según tus necesidades */
@@ -468,8 +440,9 @@ html, body {
   max-height: 1000px; /* A high value to ensure it expands */
   transition: max-height 0.5s ease-in;
 }
-
-/* Nueva sección */
+/***********************
+new section
+***********************/
 .new-section-wrapper {
   width: 100%; /* Asegura que la nueva sección tome todo el ancho disponible */
   max-width: 800px; /* Puedes ajustar este valor según tus necesidades */
@@ -542,7 +515,6 @@ html, body {
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.9); 
 }
-
 .modal-content {
   margin: auto;
   display: block;
@@ -566,7 +538,6 @@ html, body {
   text-decoration: none;
   cursor: pointer;
 }
-
 /* Responsive Styles */
 @media (max-width: 480px) {
   .container {
@@ -620,8 +591,8 @@ html, body {
     width: 30px;
   }
 }
+/******** SHARE BOTON******/
 
-/* Share button */
 .share-button-wrapper {
   text-align: right;
   margin-top: 20px;
@@ -643,8 +614,7 @@ html, body {
   margin-right: 5px;
   height: 20px;
 }
-
-/* Icon bar */
+/*******ICON BAR*******/
 .icon-bar {
   display: flex;
   justify-content: space-around;
@@ -697,12 +667,14 @@ html, body {
     font-size: 1.2rem;
   }
 }
-
-/* Footer */
+  /**************
+   FOOTER
+**************/
 .main-content {
   flex-grow: 1;
 }
 
+/* Footer */
 .footer {
   background-color: #0E1B4D;
   padding: 20px;
@@ -723,7 +695,6 @@ html, body {
   font-size: 18px;
   color: #EFF0F5;
 }
-
 .footer-menu li:hover {
   text-decoration: underline;
 }
@@ -758,6 +729,7 @@ html, body {
 
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
+  /* Estilos específicos para el footer en dispositivos móviles */
   .footer-menu-container {
     text-align: left;
     padding-left: 20px; /* Añadir un padding para la separación */
@@ -790,7 +762,8 @@ html, body {
   }
 }
 
-/* Testimonios */
+/*******testimonios*******/
+
 .testimonial-section {
   text-align: center;
   width: 90%;
