--- a/catalogo.css
+++ b/catalogo.css
@@ -259,7 +259,7 @@ body {
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 20px;
-  background-color: #fff;
+  background-color: #EFF0F5;
   box-sizing: border-box;
   max-width: 23%;
   position: relative;
@@ -297,7 +297,7 @@ body {
   right: 0;
   width: 25%;
   height: 100%;
-  background-color: white;
+  background-color: #EFF0F5;
   box-shadow: -5px 0 15px rgba(0, 0, 0, .5);
   padding: 20px;
   border-radius: 10px 0 0 10px;
@@ -335,7 +335,7 @@ body {
 
 .producto-precio {
   font-size: 1.375rem;
-  color: #FF5733;
+  color: #0E1B4D;
 }
 
 .total-pagar {
@@ -367,7 +367,7 @@ body {
   width: 100%;
   max-width: 100px;
   padding: 10px 0;
-  background-color: #FFFFFF;
+  background-color: #EFF0F5;
   border: 2px solid #0E1B4D;
   border-radius: 25px;
   font-size: 16px;
@@ -378,9 +378,9 @@ body {
 
 .eliminar-producto {
   cursor: pointer;
-  font-size: 1.25rem;
+  font-size: 1.65rem;
   color: #FF0000;
-  margin-left: 10px;
+  margin-left: -46px;
 }
 
 .subtotal-container {
